--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,15 @@
         }
         .image {
             margin-top: 20px;
+            width: 100%; /* Set image width to 100% */
+        }
+        .contact {
+            margin-top: 20px;
+            font-size: 16px;
+        }
+        .contact a {
+            text-decoration: none;
+            color: navy;
         }
     </style>
 </head>
@@ -28,8 +37,16 @@
     <div class="message">Mickael | Cloud DevOps Engineer | Bristol, UK</div>
     <div class="image">
         <a href="https://imgur.com/Pn8vft1">
-            <img src="https://i.imgur.com/Pn8vft1.jpg" alt="Mickael's Picture" title="Mickael's Picture" width="300">
+            <img src="https://i.imgur.com/Pn8vft1.jpg" alt="Mickael's Picture" title="Mickael's Picture" style="width: 100%;">
         </a>
+    </div>
+    <div class="contact">
+        <p>Contact Details:</p>
+        <ul>
+            <li><a href="tel:+447752598873">+44 (0)7752 598 873</a></li>
+            <li><a href="mailto:mickael.asghar@gmail.com">mickael.asghar@gmail.com</a></li>
+            <li><a href="https://www.linkedin.com/in/m-asghar">Connect with me on LinkedIn</a></li>
+        </ul>
     </div>
 </body>
 </html>
