code updated beta

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,6 @@
         }
         .image {
             margin-top: 20px;
-            width: 100%; /* Set image width to 100% */
         }
         .contact {
             margin-top: 20px;
@@ -37,7 +36,7 @@
     <div class="message">Mickael | Cloud DevOps Engineer | Bristol, UK</div>
     <div class="image">
         <a href="https://imgur.com/Pn8vft1">
-            <img src="https://i.imgur.com/Pn8vft1.jpg" alt="Mickael's Picture" title="Mickael's Picture" style="width: 100%;">
+            <img src="https://i.imgur.com/Pn8vft1.jpg" alt="Mickael's Picture" title="Mickael's Picture" width="300">
         </a>
     </div>
     <div class="contact">
