--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <div class="banner">Welcome Friends!</div>
+    <div class="banner">Welcome, hello Marta!</div>
     <div class="message">Mickael | Cloud DevOps Engineer | Bristol, UK</div>
     <div class="image">
         <a href="https://imgur.com/Pn8vft1">
